# rest-mapper

./: .gitignore  Cargo.toml  README.md  package-lock.json
collector/: package-lock.json  package.json  playwright.config.js
collector/src/: emit.js  index.js  instrumentation.js  preload.js
src/: error.rs  main.rs
src/app/: mod.rs  run_session.rs  shutdown.rs
src/cli/: commands.rs  mod.rs
src/collector/: event_ingest.rs  mod.rs  playwright_process.rs  protocol.rs
src/correlator/: engine.rs  grouping.rs  heuristics.rs  mod.rs  scoring.rs
src/domain/: correlation.rs  event.rs  graph.rs  mod.rs  trace.rs
src/report/: graph_view.rs  html.rs  json.rs  mod.rs  timeline.rs
src/storage/: mod.rs  raw_trace_store.rs  session_store.rs
src/utils/: mod.rs  similarity.rs  time.rs
templates/: report.html.tera
